--- a/index.html
+++ b/index.html
@@ -140,15 +140,11 @@
                     <form id="contact-form" class="contact-form">
                         <div class="form-group">
                             <label for="name">Nombre completo</label>
-                            <input type="text" id="name" name="name">
-                        </div>
-                        <div class="form-group">
-                            <label for="email">Correo Electrónico</label>
-                            <input type="email" id="email" name="email">
+                            <input type="text" id="name" name="name" required>
                         </div>
                         <div class="form-group">
                             <label for="message">Tu Mensaje</label>
-                            <textarea id="message" name="message" rows="4"></textarea>
+                            <textarea id="message" name="message" rows="4" required></textarea>
                         </div>
                         <div class="form-btn-container">
                             <button type="submit" class="form-btn">Enviar Mensaje</button>
