--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <header class="header">
         <nav class="nav-container">
-            <a href="#" class="logo">TecnoByl</a>
+            <a href="#" class="logo">TECNOBYL</a>
             <div class="menu-toggle" id="menu-btn">
                 <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path></svg>
             </div>
@@ -186,3 +186,4 @@
 
 </body>
 </html>
+
